# Rust-Midgard-API-Integration-MySQL

./: .gitignore  README.md
API/: .env  Cargo.toml
API/src/: main.rs
RuneDatabase/: Cargo.toml
RuneDatabase/src/: main.rs
SavedVersion/: Cargo.toml
SavedVersion/src/: main.rs
