[package]
name = "API"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
mysql = "24.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
thiserror = "1.0.69"
lazy_static = "1.5.0"
env_logger = "0.11.6"
log = "0.4.25"