[package]
name = "RuneDatabase"
version = "0.1.0"
edition = "2021"

[dependencies]
mysql = "24.0"
dotenvy = "0.15"
tokio = { version = "1.28", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
chrono = "0.4"
serde_json = "1.0"
time = "0.3.37"
actix-web = "4.0"
bigdecimal = "0.3"


